--- a/example.html
+++ b/example.html
@@ -6,7 +6,9 @@
         <title>RLFlashcards</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <style>
-
+            body {
+                background-color: black;
+            }
 
 
         </style>    
@@ -33,11 +35,25 @@
                 "title":"section1",
                 "questions":[
                     {"title":"Question1",
-                    "correct_answer":["aswer1"],
+                    "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     },
                     {"title":"Question2",
-                    "correct_answer":["aswer1"],
+                    "correct_answer":["answer1"],
+                    "wrong_answer":["answer2","answer3","answer4"]
+                    }
+                ]
+            }); 
+
+            app.data.addSection({
+                "title":"section2",
+                "questions":[
+                    {"title":"Question10",
+                    "correct_answer":["answer1"],
+                    "wrong_answer":["answer2","answer3","answer4"]
+                    },
+                    {"title":"Question11",
+                    "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     }
                 ]
