--- a/example.html
+++ b/example.html
@@ -33,12 +33,15 @@
 
             app.data.addSection({
                 "title":"section1",
+                "text":"Äng nu del tre bra omfångsrik kunde tidigare olika tid sin, se samtidigt mjuka annat mot vid rännil dock blev sin, som genom regn hans häst flera plats både mjuka.",
                 "questions":[
                     {"title":"Question1",
+                    "text":"Löksås ipsum häst sig i och ingalunda kanske groda, samtidigt när nya varit flera kan kanske därmed, ska precis så enligt och vemod trevnadens.",
                     "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     },
                     {"title":"Question2",
+                    "text":"Söka åker miljoner trevnadens ser stora se mjuka söka där stora vid bäckasiner, dimma helt strand björnbär se är fram oss vid omfångsrik.",
                     "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     }
@@ -47,12 +50,15 @@
 
             app.data.addSection({
                 "title":"section2",
+                "text":"Brunsås hwila rännil strand sitt mjuka åker där gör, strand björnbär så hela vad faktor enligt del, vad blivit räv redan brunsås groda dimma.",
                 "questions":[
                     {"title":"Question10",
+                    "text":"Samtidigt nu tre träutensilierna denna blivit kanske när fram som, kanske mjuka som varit faktor enligt tiden dunge.",
                     "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     },
                     {"title":"Question11",
+                    "text":"Kan björnbär i ordningens stig ser plats, dimma gör färdväg sällan björnbär sax, sitt sin som enligt hwila. ",
                     "correct_answer":["answer1"],
                     "wrong_answer":["answer2","answer3","answer4"]
                     }
