--- a/example.html
+++ b/example.html
@@ -9,9 +9,8 @@
             body {
                 background-color: black;
             }
-
-
-        </style>    
+        </style>   
+        <link href="rl-flashcard.css" rel="stylesheet"> 
     </head>
     <body>
     
