--- a/example.html
+++ b/example.html
@@ -30,6 +30,12 @@
 
             app = new RLFlashcards();
 
+            app.data.addSettings({
+                "greeting":"<h5>Välkommen</h5> Det här är ett kunskapstest som går på tid. <h6>Instruktioner</h6> ",
+                "fail":"<h3>Fel</h3> Du svarade tyvärr fel på den frågan, men du kan göra ett nytt försök genom att börja om den här delen av testet.",
+                "success":""
+            });
+
             app.data.addSection({
                 "text":"Äng nu del tre bra omfångsrik kunde tidigare olika tid sin, se samtidigt mjuka annat mot vid rännil dock blev sin, som genom regn hans häst flera plats både mjuka.",
                 "questions":[
