--- a/example.html
+++ b/example.html
@@ -33,7 +33,7 @@
             app.data.addSettings({
                 "greeting":"<h5>Välkommen</h5> Det här är ett kunskapstest som går på tid. <h6>Instruktioner</h6> ",
                 "fail":"<h3>Fel</h3> Du svarade tyvärr fel på den frågan, men du kan göra ett nytt försök genom att börja om den här delen av testet.",
-                "success":"<h3>Grattis!</h3> Du lyckades svara rätt på alla frågor och klockan har nu stannat."
+                "done":"<h3>Grattis!</h3> Du lyckades svara rätt på alla frågor och klockan har nu stannat."
             });
 
             app.data.addSection({
