--- a/example.html
+++ b/example.html
@@ -10,6 +10,9 @@
                 background-color: #3d3d3d;
             }
         </style>   
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide" rel="stylesheet">
         <link href="rl-flashcard.css" rel="stylesheet"> 
     </head>
     <body>
