--- a/demo/inline_data.html
+++ b/demo/inline_data.html
@@ -20,12 +20,14 @@
             app = new RLFlashcards();
 
             app.data.addDeck({
+                "id":"skogsfagel",
                 "greeting":"<h5>Välkommen</h5> Det här är ett kunskapstest om fåglar som går på tid.<br><br> <h6>Instruktioner</h6> * Testet är uppdelat i två delar <br> * Svarar du fel får du börja om den del du är på <br> * Varje gång du börjar om kommer frågor och svar i en ny ordning ",
                 "fail":"<h3>Fel</h3> Du svarade tyvärr fel på den frågan, men du kan göra ett nytt försök genom att börja om den här delen av testet.",
                 "done":"<h3>Grattis!</h3> Du lyckades svara rätt på alla frågor och klockan har nu stannat."
             });
 
             app.data.addSection({
+                "deck":"skogsfagel",
                 "text":"Dags att börjar testet, om du svarar fel kommer du att få börja om härifrån.<br> Men nu till den första delen som handlar om: <h5>Skogshöns<h5>",
                 "questions":[
                     {
@@ -56,6 +58,7 @@
             }); 
 
             app.data.addSection({
+                "deck":"skogsfagel",
                 "text":"Bra jobbat med förra delen, om du svarar fel i fortsättningen så kommer du att får starta om härifrån. <br> Nu tar vi tag i nästa del om: <h5>Vattenfåglar</h5>",
                 "questions":[
                     {
